<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoini"
    tools:context=".Menu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logini" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="88dp">
z

            <androidx.cardview.widget.CardView
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="30dp"

                > <!-- Establece layout_gravity en center para centrar el CardView -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/welcome"
                        android:textColor="@color/black"
                        android:textSize="32dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:alpha="0.7"
                        android:text="@string/choice"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </RelativeLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pmi_menu"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/pmi"
                        android:textColor="@color/white"
                        app:backgroundTint="#004793"
                        app:cornerRadius="10dp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/lpr_menu"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/lpr"
                        android:textColor="@color/white"
                        app:backgroundTint="#004793"
                        app:cornerRadius="10dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>